# weather-station-JonasEHartig

./: README.md  weather-station-JonasEHartig.code-workspace
Arudino/: platformio.ini
Arudino/src/: main.cpp
MQTTClient/: BuildCMake.sh  CMakeLists.txt  cmakepresets.json  main.cpp
MQTTClient/src/: main.cpp
